feat: bulk text implementation
